# cloudera_dbx_analyzer_project

cloudera_dbx_analyzer_project/: README.md  pyproject.toml
cloudera_dbx_analyzer_project/docs/: design.md  known_limitations.md
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/cli/: main.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/config/: defaults.yml  loader.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/config/patterns/: connections.yml  languages.yml  paths.yml  secrets.yml
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/config/rubrics/: complexity.yml
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/core/dependency/: graph.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/core/discovery/: content_loader.py  file_classifier.py  repo_scanner.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/core/extraction/: database_schema_parser.py  database_schema_parser.py.backup  extractors.py  sql_complexity_analyzer.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/core/metrics/: complexity.py  counts.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/models/: schema.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/reporting/: csv_export.py  render.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/runtime/: paths.py
cloudera_dbx_analyzer_project/src/cldmigrate_analyzer/utils/: logging.py  redaction.py
cloudera_dbx_analyzer_project/src/cloudera_dbx_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+14 files in other folders)
